k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mldashboard-service
  namespace: default
spec:
  selector:
    app: mldashboard-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
